Revision history for RapidApp

1.0302 2015-04-28
    - Fixing bug in order of logout/delete_session in Auth Controller (GETTY)
    - Requires DBIx::Class::Schema::Diff 1.03 (dist.ini) - fixes #136 (VANSTYN)
    - Drop JSON::DWIW (Michael Lackhoff)
    - Added all missing stopwords for podspelling release test (GETTY)

1.0301 2015-04-26
    - Fix for the "Add to sort" functionality of Grid Multi-Sort (GETTY)

1.0300 2015-04-23
    - Grid Multi-Sort (#128, PR #133/#134) (GETTY)

1.0205 2015-04-16
    - Fix bug in relative date query handling
    - login_logo_url now properly handles mount_url
    - App name is now shown in the loaded time banner (console)

1.0204 2015-03-27
    - New ctx method $c->ra_builder returns RapidApp::Builder object - undef
      unless the app was generated in that manner, such as Rapi::Fs
    - New top-level Catalyst cfg option 'inject_components' (see below)
    - New attr 'inject_components' available in RapidApp::Builder (see POD)
    - Require Catalyst 5.90085 + DBIx::Class 0.082820

1.0203 2015-03-24
    - Fixes related to internal Ajax JS queues (added in 1.02)
      this fixes broken direct linking/loading of a URL (from the outside)
    - Fixes/improvements to browser title update

1.0202 2015-03-17
    - POD tweak
    - Fix js undef err outside of nav context (tree click)
    - Add Module util method local_url()
    - Require Catalyst 5.90084 + Plack 1.0034

1.0201 2015-03-14
    - Add back dummy vers of previously deleted share dir files to ensure clean on 
      systems out in the wild

1.0200 2015-03-13
    - NEW FEATURE/CLASS: RapidApp::Builder
    - Simplified and more flexible cfg for favicon - 'default_favicon_url'
    - Internal Ajax JS now queues and limits to 2 simultaneous requests
    - Browser title update now works for all (TabGui) tabs (#117)
    - Template::Controller cfg now supports 'include_paths' option
    - local_assets_dir cfg no longer has to be relative to app home (which may not exist)